:bug: Scrollbar overlapping tabs

--- a/interface/src/scss/main.scss
+++ b/interface/src/scss/main.scss
@@ -318,9 +318,10 @@ pre {
     }
     .chrome-tabs-content {
       position: relative;
-      width: 100%;
+      width: calc(100% + 30px);
       height: 100%;
-      overflow: scroll;
+      overflow-x: scroll;
+      overflow-y: hidden;
       &::-webkit-scrollbar {
         display: none
       }
